--- a/reservation-microservice/.env.example
+++ b/reservation-microservice/.env.example
@@ -3,7 +3,7 @@ API_KEY=xK7mP9nQ2wR5tY8uI1oL4jH6gS3aZ0bVcX8zL2kJ5hG
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:2tXIeahpLbxF8Ei4vXliYsaLTQaBsyExXL/Bhrdmr7g=
+APP_KEY=base64:8ZzvsgAQsSBKp6aoZT5aysDm1xrSkjlfXEb5ysYrNpA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,9 +12,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=auth-db
+DB_HOST=reservation-db
 DB_PORT=3306
-DB_DATABASE=auth_db
+DB_DATABASE=reservation_db
 DB_USERNAME=root
 DB_PASSWORD=secret
 
@@ -53,3 +53,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#URLs de otros microservicios
+NOTIFICATIONS_SERVICE_URL=http://notifications-service:5000
